# edit-benchmark

./: .gitignore  README.md  pyproject.toml
extensions/empty2/: index.ts
groups/ambiguous-text/step-1-fix-handle-event/: instruction.md  validate.yaml
groups/ambiguous-text/step-2-change-handle-alert/: instruction.md  validate.yaml
groups/ambiguous-text/step-3-add-type-hints/: instruction.md  validate.yaml
groups/api-refactor/step-1-add-import/: instruction.md  validate.yaml
groups/api-refactor/step-2-add-timeout/: instruction.md  validate.yaml
groups/api-refactor/step-3-add-error-handling/: instruction.md  validate.yaml
groups/boundary/step-1-fill-empty/: instruction.md  validate.yaml
groups/boundary/step-2-edit-lone-line/: instruction.md  validate.yaml
groups/boundary/step-3-edit-ends/: instruction.md  validate.yaml
groups/bracket-hell/step-1-wrap-inner-block/: instruction.md  validate.yaml
groups/bracket-hell/step-2-edit-nested-dict/: instruction.md  validate.yaml
groups/bracket-hell/step-3-reorder-conditions/: instruction.md  validate.yaml
groups/distributed-rename/step-1-rename-function/: instruction.md  validate.yaml
groups/distributed-rename/step-2-rename-class/: instruction.md  validate.yaml
groups/distributed-rename/step-3-rename-constant/: instruction.md  validate.yaml
groups/indentation/step-1-wrap-try/: instruction.md  validate.yaml
repro/: README.md  prompt-bug.txt  prompt-ok.txt
src/edit_benchmark/: __init__.py  cli.py  reviewer.py  runner.py  session_formatter.py  session_parser.py  validator.py
(+25 files in other folders)
