[project]
name = "edit-benchmark"
version = "0.1.0"
description = "Benchmark suite for LLM coding agent edit tool schemas"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6"]

[project.scripts]
edit-benchmark = "edit_benchmark.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
